WebDriver some fixes